--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -2,7 +2,12 @@ sky:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     host: localhost
-    port: 3306
-    database: sky_take_out
+    port: 2453
+    database: delivery
     username: root
-    password: root
+    password: 324Wangsiyi@
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tLXFvviwFwadM93gSxz
+    access-key-secret: bJAp2kYwALSPCEySFEPM2m5OLTacld
+    bucket-name: w0sy
