day3 --导入地址簿模块功能实现 --用户下单功能实现 --订单支付功能实现 --订单状态定时处理（Spring Task）（涉及订单自动取消以及长时间在配送单的自动取消） --来单提醒以及客户催单功能的实现（WebSocket）

--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -19,3 +19,14 @@ delivery:
   wechat:
     appid: wxd47bcf4d498a06bc
     secret: e71961066935f2ad3e23d99d44b181c6
+    mchid:
+    mchSerialNo:
+    privateKeyFilePath:
+    apiV3Key:
+    weChatPayCertFilePath:
+    notifyUrl: https://3960fbda.r19.vip.cpolar.cn/notify/paySuccess
+    refundNotifyUrl: https://3960fbda.r19.vip.cpolar.cn/notify/refundSuccess
+  shop:
+    address: 北京市海淀区上地十街10号
+  baidu:
+    ak: 5wXgJXTYgH5DqI9iMQ6O5xwbh9GZwKEa
